NetworkService:  Destroy URLLoaders when a NetworkContext is destroyed.

URLRequests can't outlast the URLRequestContext that spawned them, so
the current code can cause crashes on NetworkContext destruction.

BUG=735995

Review-Url: https://codereview.chromium.org/2951293002
Cr-Commit-Position: refs/heads/master@{#481760}

Former-commit-id: 28bcb85f5c7f1e56f57a0b26f9a878196adedb3f